修复轮播li宽度问题

--- a/仿站/bilibili/styles/styles.css
+++ b/仿站/bilibili/styles/styles.css
@@ -468,10 +468,12 @@ span {
 
 .carousel > .c-img > li {
     display: block;
+    width: 440px;
+    height: 220px;
     float: left;
 }
 
-.carousel > .c-img > li a {
+.carousel > .c-img > li > a {
     display: block; 
     width: 100%;
 }
