--- a/jojo/css/style.css
+++ b/jojo/css/style.css
@@ -8,6 +8,11 @@ img {
     padding: 0;
 }
 
+body,
+html {
+    height: 100%;
+}
+
 a {
     text-decoration: none;
 }
@@ -22,8 +27,24 @@ li {
     clear: both;
 }
 
+.top {
+    position: fixed;
+    top: 85%;
+    right: 2%;
+    width: 50px;
+    height: 100px;
+    border-radius: 6px;
+    box-shadow: 2px 3px 2px #000;
+    background: url(../images/top.jpg) top center no-repeat;
+    background-size: cover;
+    cursor: pointer;
+    z-index: 666;
+    display: none;
+}
+
 nav {
     position: fixed;
+    top: 0;
     width: 100%;
     height: 75px; 
     background: #000;
@@ -83,19 +104,93 @@ nav img {
 
 #header {
     position: relative;
+    height: 100%;
 }
 
-.header-video {
+.carousel {
+    position: relative;
     width: 100%;
-    height: 800px;
-    min-width: 640px;
-    background: #000;
+    height: 100%;
+    /*overflow: hidden;*/
 }
+
+.carousel .slides-img {
+    position: absolute;
+    display: block;
+    width: 400%;
+    height: 100%;
+}
+
+.carousel .slides-img > li {
+    display: block;
+    float: left;
+    width: 25%;
+    height: 100%;
+}
+
+.carousel .slides-img > li  a {
+    display: block;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel .slides-img > li img {
+    width: 100%;
+    height: 100%;
+}
+
+.carousel .btn {
+    display: block;
+    position: absolute;
+    top: 50%;
+    margin-top: -5%;
+    width: 5%;
+    height: 10%;
+
+}
+
+.carousel .btn.next {
+    right: 0;
+}
+
+.carousel .btn img {
+    width: 100%;
+    box-shadow: 2px 1px 3px #000;
+}
+
+.carousel .shulling-btn {
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    margin-left: -10%;
+    display: block;
+    width: 20%;
+    height: 4%;
+}
+
+.carousel .shulling-btn > li {
+    display: block;
+    float: left;
+    margin: 0 7.5%;
+    width: 10%;
+    height: 100%;
+    background: #F1F1F1;
+    cursor: pointer;
+    border-radius: 80%;
+    box-shadow: 1px 1px 1px #000;
+}
+
+.carousel .shulling-btn > li.active {
+    background: #222222;
+}
+
+
+
 
 .intro-text {
     text-align: center;
     position: absolute;
-    bottom: 50px;
+    top: 50%;
     left: 50%;
     transform: translateX(-50%);
     color: #fff;
