--- a/jojo/css/style.css
+++ b/jojo/css/style.css
@@ -39,7 +39,6 @@ li {
     background-size: cover;
     cursor: pointer;
     z-index: 666;
-    display: none;
 }
 
 nav {
@@ -111,7 +110,7 @@ nav img {
     position: relative;
     width: 100%;
     height: 100%;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 
 .carousel .slides-img {
