--- a/仿站/bilibili/styles/styles.css
+++ b/仿站/bilibili/styles/styles.css
@@ -64,6 +64,71 @@ span {
     color: #00A1D6;
 }
 
+.icon {
+    display: block;
+    background: url(../images/icons.png) no-repeat;
+}
+
+.read-push {
+    width: 130px;
+    height: 25px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    transition: all .3s;
+    
+}
+
+.read-push:hover {
+    background: #CCD0D7;
+}
+
+
+.read-push .icon_read {
+    margin: 6px 0 0 12px;
+    width: 15px;
+    height: 15px;
+    float: left;
+    background-position: -473px -88px;
+}
+
+.read-push > .read_info {
+    float: left;
+    margin-left: 10px;
+    margin-top: 5px;
+}
+
+.read-push > .read_info > b {
+    
+}
+
+.btn-more {
+    width: 58px;
+    height: 25px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    text-align: center;
+}
+
+.btn-more:hover {
+    background: #CCD0D7;
+}
+
+.btn-more > span {
+    display: inline-block;
+    font-size: 14px;
+    line-height: 25px;
+    color: #555555;
+    vertical-align: middle;
+}
+
+.icon_right {
+    display: inline-block;
+    width: 8px;
+    height: 12px;
+    background-position: -476px -218px;
+    vertical-align: middle;
+}
+
 /*头部区域*/
 .header {
     height: 170px;
@@ -868,7 +933,6 @@ span {
 }
 
 .live-l-header {
-    width: inherit;
     height: 34px;
 }
 
@@ -919,7 +983,193 @@ span {
     background-position: -141px -656px;
 }
 
+.live-l-header > .read-push {
+    float: right;
+    margin-top: 7px;
+}
 
+.live-l-header > .btn-more {
+    float: right;
+    margin-top: 7px;
+    margin-left: 10px;
+}
+
+
+/*直播区右边*/
+.live-r {
+    position: relative;
+    width: 260px;
+    height: 372px;
+    float: left;
+    overflow: hidden;
+}
+
+.live-r-header {
+    height: 34px;
+    font-size: 0;
+}
+
+.live-tab {
+    position: relative;
+    display: inline-block;
+    padding: 10px 0;
+    margin-right: 12px;
+    color: #000;
+    border-bottom: 1px solid transparent;
+    cursor: pointer;
+    font-size: 12px;
+    transition: all .3s;
+}
+
+.live-tab:before {
+    content: '';
+    display: none;
+    position: absolute;
+    left: 50%;
+    margin-left: -3px;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border: 3px dashed #00a1d6;
+    border-bottom-style: solid;
+    border-top: 0;
+    border-left-color: transparent;
+    border-right-color: transparent;
+}
+
+.live-tab:hover {
+    color: #00A1D6;
+}
+
+.carousel-tab-live {
+    position: absolute;
+    top: 56px;
+    left: -200%;
+    width: 300%;
+}
+
+.tab-box {
+    width: 260px;
+    float: left;
+}
+
+.load-state {
+    padding: 10px 0;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.carousel-min-box {
+    position: relative;
+    width: 260px;
+    height: 248px;
+}
+
+.carousel-min {
+    position: absolute;
+    width: 300%;
+    height: 248px;
+}
+
+.carousel-min > li {
+    display: block;
+    float: left;
+    width: 260px;
+}
+
+.carousel-min > li > a {
+    display: block;
+    width: 100%;
+}
+
+.carousel-min > li > a > img {
+    display: block;
+    width: 100%;
+    vertical-align: middle;
+    border-radius: 6px;
+}
+
+.cbm-title-box {
+    position: absolute;
+    bottom: 0;
+    width: 260px;
+    height: 56px;   
+    background:  rgba(0,0,0,.5);
+    border-radius: 0 0 6px 6px;
+    z-index: 50px;
+}
+
+.cbm-title-box > a,
+.cbm-title-box > .cbm-btn {
+    display: block;
+    width: 100%;
+    height: 28px;
+    background: rgba(0,0,0, .5);
+}
+
+.cbm-title-box > a {
+    box-sizing: border-box;
+    background: rgba(0,0,0, .1);
+    padding-top: 6px;
+    padding-left: 10px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.cbm-title-box > a > p {
+    text-align: left;
+    color: #fff;
+    /*margin: 12px 0 12px 0;*/
+}
+
+.cbm-title-box > .cbm-btn {
+    border-radius: 0 0 6px 6px;
+    text-align: center;
+    line-height: 38px;
+    font-size: 0;
+
+}
+
+.cbm-title-box > .cbm-btn > li {
+    display: inline-block;
+    width: 11px;
+    height: 7px;
+    margin: 0 5px;
+    font-size: 12px;
+    background: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+    transition: all .3s;
+
+}
+
+.cbm-title-box > .cbm-btn > li.active {
+    width: 33px;
+    background-color: #F45D8F;
+}
+
+.up-recommend {
+    position: absolute;
+    display: block;
+    margin-top: 10px;
+    margin-left: -6px;
+    width: 287px;
+    font-size: 0;
+}
+
+.up-recommend > li {
+    display: inline-block;
+    margin-left: 6px;
+    width: 60px;
+    height: 60px;
+    
+    background: #333;
+    vertical-align: middle;
+}
+
+.up-recommend > li > a {
+    font-size: 12px;
+}
 
 
 /*直播区域结束*/
