--- a/jojo/css/style.css
+++ b/jojo/css/style.css
@@ -287,7 +287,7 @@ nav img {
 
 .role li {
     position: relative;
-    min-width: 1600px;
+    max-width: 1600px;
     height: 500px;
     margin: 0 auto;
     padding-bottom: 100px;
