--- a/jQuery实例效果集合/works/css/style.css
+++ b/jQuery实例效果集合/works/css/style.css
@@ -3,12 +3,12 @@ a {
 }
 
 body {
-    background: url(../images/fsn.png) no-repeat;
+    background: url(../images/fsn.png) center center no-repeat;
     background-size:cover;
 }
 
 .layout {
-    width: 1360px;
+    max-width: 1360px;
     margin: 20px auto 0; 
     margin-bottom: 20px; 
     opacity: .9;
@@ -59,13 +59,31 @@ body {
     overflow: hidden;
 }
 
+@media (max-width: 1360px) {
+    body,html {
+        min-width: 1200px;
+    }
+    .layout > .main {
+        width: 1060px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (max-width: 768px) {
+    body,html {
+        min-width: 1000px;
+    }
+}
+
+
 .main .menu {
     margin: 20px 0;
     text-align: center;
 }
 
 .img-box {
-    width: 325px;
+    width: 100%;
     height: 325px;
     overflow: hidden;
 }
@@ -138,4 +156,6 @@ body {
     line-height: 35px;
     height: 35px;
 }
+
+
 
