--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -54,14 +54,21 @@ li {
 
 .aside .content span {
 	display: inline-block;
-    width: 35%;
-    padding: 10px 10px;
+    width: 65%;
+    padding: 10px 0;
+    text-align: left;
+}
+
+.aside .content .xinxi-title {
+    width: 25%;
+    text-align: center;
 }
 
 .aside .content .contact span {
 	display: block;
 	text-align: left;
 	margin-left: 15%;
+    padding: 10px 10px;
 	width: 80%;
 	overflow: hidden;
 	white-space: nowrap;
@@ -77,7 +84,7 @@ li {
 	float: left;
 	width: 40%;
 	margin: 15px;
-	font-size: 1.5em;
+	font-size: 1.2em;
 }
 
 .main {
