--- a/resume/css/style.css
+++ b/resume/css/style.css
@@ -2,6 +2,7 @@ body,html {
     height: 100%;
 	font-family: "Microsoft YaHei","iconfont"  !important;
     background: url(../images/export_bg.jpg) 0;
+    font-size: 16px;
 }
 
 a {
