--- a/resume/css/style_c.css
+++ b/resume/css/style_c.css
@@ -1,6 +1,6 @@
 body,html {
     height: 100%;
-	font-family: "Microsoft YaHei","Helvetica","iconfont"  !important;
+	font-family: "Microsoft YaHei",Arial,Helvetica,sans-serif !important;
     background: url(../images/export_bg.jpg) 0;
     font-size: 16px;
 }
