--- a/resume/css/style_c.css
+++ b/resume/css/style_c.css
@@ -1,5 +1,4 @@
-body,html {
-    height: 100%;
+body {
 	font-family: "Microsoft YaHei",Arial,Helvetica,sans-serif !important;
     background: url(../images/export_bg.jpg) 0;
     font-size: 16px;
@@ -49,7 +48,7 @@ li {
 .aside .content h2 {
 	display: inline-block;
 	width: 100%;
-	padding: 10px 0;
+	padding: 11px 0;
 	background: #A4C2DE;
 	color: #fff;
 	box-shadow: 2px 3px 5px #ccc;
@@ -91,6 +90,10 @@ li {
 	font-size: 1.2em;
 }
 
+.course {
+    padding-left: 10px;
+}
+
 .main {
 	width: 60%;
 	float: right;
@@ -130,10 +133,22 @@ li {
 	margin-bottom: 20px;
 }
 
+.self-assessment span,
+.skill span,
+.demo span {
+    font-size: 16px;
+    width: 90%;
+    color: #333;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
 .main p {
 	margin: 0 20px 30px;
-    font-size: 16px;
+    font-size: 1.3em;
 }
+
+
 
 .adorn {
 	height: 90px;
