--- a/仿站/ronyon/css/style.css
+++ b/仿站/ronyon/css/style.css
@@ -34,7 +34,8 @@ body {
 }
 
 .nav > li > a:focus {
-    background-color: #fff;
+    color: #000;
+    background: #fff;
 }
 
 .nav > li > a:hover {
@@ -198,9 +199,86 @@ body {
     transition: all .3s;
 }
 
+.product-img .warp > .warp-link {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate(50%, -50%);
+    width: 48px;
+    height: 48px;
+    background: url(../images/icon_btn.png) no-repeat;
+    opacity: 0;
+}
+
+.product-img .warp > i {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(-50%, -50%);
+    width: 48px;
+    height: 48px;
+    background: url(../images/icon_btn.png) -70px 0 no-repeat;
+    opacity: 0;
+}
+
+@keyframes run {
+    0% {
+        left: 10%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+    }
+
+    90% {
+        left: 60%;
+        transform: translate(-50%, -50%);
+        opacity: 1;
+    }
+    100% {
+        left: 50%;
+        transform: translate(-50%, -50%);
+        opacity: 1;
+    }
+}
+
+@keyframes run2 {
+    0% {
+        right: 10%;
+        transform: translate(-50%, -50%);
+        opacity: 0;
+    }
+
+    90% {
+        right: 60%;
+        transform: translate(50%, -50%);
+        opacity: 1;
+    }
+    100% {
+        right: 50%;
+        transform: translate(50%, -50%);
+        opacity: 1;
+    }
+}
+
+.productbox div:hover .warp > i {
+    animation: run .5s cubic-bezier(0.175, 0.885, 0.320, 1.275);
+    animation-fill-mode: forwards;
+}
+
+.productbox div:hover .warp > a {
+    animation: run2 .5s cubic-bezier(0.175, 0.885, 0.320, 1.275);
+    animation-fill-mode: forwards;
+}
+
 .productbox img {
-    transition: all 5s ease-out;
+    transition: all 5s ease-in-out;
     height: 280px;
+}
+
+@media (max-width: 762px) {
+    .productbox img {
+        height: 180px;
+    }
 }
 
 .caption h5 {
@@ -266,8 +344,66 @@ body {
     margin-bottom: 60px;
 }
 
-.case-box > div {
+.case-box .case-img {
+    position: relative;
     margin-top: 20px;
+    overflow: hidden;
+}
+
+.case-box .case-img img {
+    transition: all 5s;
+}
+
+.case-box .case-img:hover img {
+    transform: scale(1.2, 1.2);
+}
+
+.case-box .case-img:hover .warp {
+    opacity: 1;
+}
+
+.case-box .warp {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    background: rgba(0,0,0, .5);
+    transition: all .3s;
+}
+
+.case-box .warp > .warp-link {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: scale(50%, -50%);
+    width: 48px;
+    height: 48px;
+    background: url(../images/icon_btn.png) no-repeat;
+    opacity: 0;
+}
+
+.case-box .warp > i {
+    content: '';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(-50%, -50%);
+    width: 48px;
+    height: 48px;
+    background: url(../images/icon_btn.png) -70px 0 no-repeat;
+    opacity: 0;
+}
+
+.case-box .case-img:hover .warp > i {
+    animation: run .5s cubic-bezier(0.175, 0.885, 0.320, 1.275);
+    animation-fill-mode: forwards;
+}
+
+.case-box .case-img:hover .warp > a {
+    animation: run2 .5s cubic-bezier(0.175, 0.885, 0.320, 1.275);
+    animation-fill-mode: forwards;
 }
 
 
@@ -292,6 +428,7 @@ body {
 }
 
 .case-box > .more > a {
+    margin-top: 20px;
     display: block;
     width: 100%;
     height: 100%;
