nav颜色小修改

--- a/仿站/ronyon/css/style.css
+++ b/仿站/ronyon/css/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .nav-toggle:before {
-  color: #f4421a;
+  color: #31A2E4;
   font-family: "responsivenav", sans-serif;
   font-style: normal;
   font-weight: normal;
