--- a/resume/css/style_c.css
+++ b/resume/css/style_c.css
@@ -33,7 +33,7 @@ strong {
 }
 
 .aside {
-    height: 1360px;
+    height: auto;
     width: 350px;
     float: left;
     margin-left: 50px;
@@ -73,6 +73,7 @@ strong {
     text-align: center;
 }
 
+
 .aside .content .contact span {
 	display: block;
 	text-align: left;
@@ -104,6 +105,22 @@ strong {
 	width: 60%;
 	float: right;
 	margin-right: 30px;
+}
+
+/*二维码盒子*/
+.aside .content .quick-mark {
+    vertical-align: middle;
+    text-align: left;
+    padding-left: 20px;
+}
+
+.aside .content .quick-mark span {
+    width: 100px;
+    vertical-align: middle;
+}
+
+.aside .content .quick-mark .qr-code {
+    width: 100%;
 }
 
 .main h3 {
